Update README and index.

--- a/subscribed/templates/index.html
+++ b/subscribed/templates/index.html
@@ -20,7 +20,9 @@ As of this moment, GitHub does not allow you to know who is watching your
 repositories (or anyone's repositories) without accessing the API. This 
 website makes that information freely available to you using <a 
     href="http://flask.pocoo.org">Flask</a> and
-<a href="https://github.com/sigmavirus24/github3.py">github3.py</a>.
-Simply use a link like <a href="/sigmavirus24/github3.py">this</a> and a 
+<a href="https://github.com/sigmavirus24/github3.py">github3.py</a> and a 
 minimalistic design.
+Simply use a link like <a href="/sigmavirus24/github3.py">this</a> to find the 
+subscribers to a repository. Use a link like <a href="/sigmavirus24">this</a> 
+to find out what repositories a user is subscribed to.
 {% endblock %}
