Fix the index and add robots.txt

--- a/subscribed/templates/index.html
+++ b/subscribed/templates/index.html
@@ -10,7 +10,7 @@ Subscribed
 
 {% block extraheader %}
 <h2>
-View the subscription for any user or public repository on GitHub.
+View a user's subscriptions or a repository's subscribers
 </h2>
 {% endblock %}
 
@@ -25,4 +25,6 @@ minimalistic design.
 Simply use a link like <a href="/sigmavirus24/github3.py">this</a> to find the 
 subscribers to a repository. Use a link like <a href="/sigmavirus24">this</a> 
 to find out what repositories a user is subscribed to.
+<br /><br />
+This only works for public repositories.
 {% endblock %}
