--- a/subscribed/templates/index.html
+++ b/subscribed/templates/index.html
@@ -25,9 +25,11 @@ minimalistic design.
 Simply use a link like <a href="/sigmavirus24/github3.py">this</a> to find the 
 subscribers to a repository. Use a link like <a href="/sigmavirus24">this</a> 
 to find out what repositories a user is subscribed to.
-<br /><br />
-This only works for public repositories.
-<br /><br />
+</p>
+
+<p>This only works for public repositories.</p>
+
+<p>
 If you're visiting this site via www.pythonanywhere.com, it will not work.  
 github3.py uses <a href="http://python-requests.org">requests</a> to make 
 calls to the GitHub API. As of this moment, requests does not work well with 
@@ -35,12 +37,16 @@ making calls to HTTPS sites over a proxy and I cannot afford to upgrade to the
 premium version of PythonAnywhere. Until requests can handle proxies better or 
 I have the funds to pay for the premium version, this website will not work.  
 If you would prefer to help with the latter, feel free to gittip me:<br />
+</p>
+
 <iframe style="border: 0; margin: 0; padding: 0;"
             src="https://www.gittip.com/sigmavirus24/widget.html"
-                    width="48pt" height="20pt"></iframe>
-<br />
-All the money raised there will go towards paying the monthly subscription.
-<br /><br />
+                    width="48pt" height="22pt"></iframe>
+
+<p>All the money raised there will go towards paying the monthly subscription. 
+</p>
+
+<p>
 If instead you're hosting the website elsewhere yourself, please send me an 
 email so I can promote it.
 {% endblock %}
