--- a/subscribed/templates/base.html
+++ b/subscribed/templates/base.html
@@ -24,5 +24,14 @@
         <p>
         {% block body %}{% endblock %}
         </p>
+
+        <div id="footer">
+            <p>
+            &copy; Copyright 2012 - Ian Cordasco.
+            <a href="https://github.com/sigmavirus24/subscribed">
+                Fork subscribed on GitHub
+            </a>
+            </p>
+        </div>
     </body>
 </html>
