Heroku-ize the app.

--- a/subscribed/templates/index.html
+++ b/subscribed/templates/index.html
@@ -27,26 +27,27 @@ subscribers to a repository. Use a link like <a href="/sigmavirus24">this</a>
 to find out what repositories a user is subscribed to.
 </p>
 
-<p>This only works for public repositories.</p>
-
-<p>
-If you're visiting this site via www.pythonanywhere.com, it will not work.  
-github3.py uses <a href="http://python-requests.org">requests</a> to make 
-calls to the GitHub API. As of this moment, requests does not work well with 
-making calls to HTTPS sites over a proxy and I cannot afford to upgrade to the 
-premium version of PythonAnywhere. Until requests can handle proxies better or 
-I have the funds to pay for the premium version, this website will not work.  
-If you would prefer to help with the latter, feel free to gittip me:<br />
-</p>
+<p style="font-size: 120%; text-align: center;"><b>This only works for public 
+    repositories.</b></p>
 
 <iframe style="border: 0; margin: 0; padding: 0;"
             src="https://www.gittip.com/sigmavirus24/widget.html"
                     width="48pt" height="22pt"></iframe>
 
-<p>All the money raised there will go towards paying the monthly subscription. 
+
+<p>
+If you're visiting this site via PythonAnywhere, it will not work.  github3.py 
+uses <a href="http://python-requests.org">requests</a> to make calls to the GitHub 
+API. As of this moment, requests does not work well with making calls to HTTPS 
+sites over a proxy and I cannot afford to upgrade to the premium version of 
+PythonAnywhere. Until requests can handle proxies better or I have the funds 
+to pay for the premium version, this website will not work.  If you would 
+prefer to help with the latter, feel free to GitTip me.<br />
 </p>
 
 <p>
-If instead you're hosting the website elsewhere yourself, please send me an 
-email so I can promote it.
+If you're visiting this via Heroku, currently I'm keeping this running on one 
+instance but it may (if this becomes popular) require more than that and hence 
+cost me money. Either way, all monetary support will go towards paying for 
+this simple service.
 {% endblock %}
