--- a/subscribed/templates/base.html
+++ b/subscribed/templates/base.html
@@ -9,8 +9,7 @@
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300"
         rel="stylesheet" type="text/css" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link href={{ url_for('static', filename='default.css') }}
-        rel="stylesheet" type="text/css" />
+        <link href="/static/default.css" rel="stylesheet" type="text/css" />
         <meta name="author" content="Ian Cordasco">
     </head>
 
