Message flashing for errors

--- a/subscribed/templates/index.html
+++ b/subscribed/templates/index.html
@@ -12,6 +12,14 @@ Subscribed
 <h2>
 View a user's subscriptions or a repository's subscribers
 </h2>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+            <p class="flashed">{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 {% endblock %}
 
 
