--- a/subscribed/static/default.css
+++ b/subscribed/static/default.css
@@ -7,6 +7,13 @@ a:hover {
     color : #666;
 }
 
+p.flashed {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18pt;
+    color: #ff0000;
+}
+
 body {
     margin : 0 auto 0 auto;
     padding : 5px;
